--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             font-size: 60px;
             color: yellow;
         }
-        div>h1{
+        h3{
             font-size: 100px;
             color: red;
-            bottom: 500px;
+            bottom: 100px;
 
         }
 
@@ -87,47 +87,235 @@
             bottom: 250px;
         }
 
-        @media all and (max-width: 425px){
+        @media all and (min-width: 320px) {
+            header {
+                position: relative;
+                height: 121px;
+                width: 1036px;
+                box-shadow: -2px 6px 45px -4px #917a7a;
+            }
+
+                header>nav>ul {
+                    position: absolute;
+                    right: 0;
+                    left: 0;
+                    width: max-content;
+                    bottom: 60px;
+                    font-size: 20px;
+                    font-family: 'Lobster', cursive;
+                    margin-left: -231px;
+                    margin: auto;
+                    margin-left: 14px;
+                    list-style: none;
+                    color: white;
+                    padding-left: 0px;
+                }
+                h1 {
+                    font-size: 23px;
+                    color: yellow;
+                    margin: auto;
+                    margin-left: -67px;
+                }
+                h2 {
+                    font-size: 15px;
+                    color: white;
+                    margin: auto;
+                    margin-left: -13px;
+                }
+                h3 {
+                    font-size: 33px;
+                    color: red;
+                    bottom: 60px;
+                    margin: auto;
+                    margin-left: -63px;
+                    margin-top: -19px;
+                }
+                main> section>img {
+                    padding: 0 10px 0 10px;
+                    position: relative;
+                    bottom: -195px;
+                }
+                section>div>img {
+                    border-radius: 200px;
+                    position: absolute;
+                    right: -32px;
+                    top: 350px;
+                }
+                }
+            @media all and (min-width: 320px)and (max-width: 425px) {
+                header {
+                    position: relative;
+                    height: 92px;
+                    width: 1036px;
+                    box-shadow: -2px 6px 45px 1px #917a7a;
+                }
+                header>nav>ul {
+                    position: absolute;
+                    right: 0px;
+                    left: 78px;
+                    bottom: 56px;
+                    font-size: 20px;
+                    margin: auto;
+                    margin-left: -68px;
+                    padding-left: 0;
+                    width: max-content;
+                }
+                h1 {
+                    font-size: 22px;
+                    color: yellow;
+                    margin: auto;
+                    margin-left: -60px;
+                    margin-top: 31px;
+                    bottom: 103px;
+                }
+                h2 {
+                    font-size: 16px;
+                    color: white;
+                    margin: auto;
+                    margin-left: -35px;
+                    margin-top: 23px;
+                }
+                h3 {
+                    font-size: 65px;
+                    color: red;
+                    bottom: 93px;
+                    margin: auto;
+                    margin-top: -6px;
+                    margin-left: -326px;
+                }
+                main> section>img {
+                    bottom: -76px;
+                    width: 39px;
+                    top: 103px;
+                }
+                section>div>img {
+                    position: absolute;
+                    right: 17px;
+                    top: 325px;
+                    width: 199px;
+                }
+            }
+
+            @media all and (min-width: 425px) and (max-width: 768px){
+                header {
+                    position: relative;
+                    height: 92px;
+                    width: 1036px;
+                    box-shadow: -2px 6px 45px 1px #917a7a;
+                }
+                header>nav>ul {
+                    position: absolute;
+                    right: 0px;
+                    left: 78px;
+                    bottom: 56px;
+                    font-size: 20px;
+                    margin: auto;
+                    margin-left: -68px;
+                    padding-left: 0;
+                    width: max-content;
+                }
+                h1 {
+                    font-size: 22px;
+                    color: yellow;
+                    margin: auto;
+                    margin-left: -60px;
+                    margin-top: 31px;
+                    bottom: 103px;
+                }
+                h2 {
+                    font-size: 16px;
+                    color: white;
+                    margin: auto;
+                    margin-left: -35px;
+                    margin-top: 23px;
+                }
+                h3 {
+                    font-size: 65px;
+                    color: red;
+                    bottom: 93px;
+                    margin: auto;
+                    margin-top: -6px;
+                    margin-left: -326px;
+                }
+                main> section>img {
+                    bottom: -76px;
+                    width: 35px;
+                    top: 20px;
+                }
+                section>div>img {
+                    position: absolute;
+                    right: 328px;
+                    top: 307px;
+                    width: 144px;
+                    margin: auto;
+                    /* margin-left: 79px; */
+                }
+        }
+
+        @media all and (min-width: 768px) and (max-width: 1024px){
+            header {
+                position: relative;
+                height: 92px;
+                width: 1036px;
+                box-shadow: -2px 6px 45px 1px #917a7a;
+            }
+
+
+
             header>nav>ul {
                 position: absolute;
                 right: 0px;
-                left: 0;
-                bottom: 31px;
-                font-size: 14px;
+                left: 78px;
+                bottom: 29px;
+                font-size: 20px;
                 margin: auto;
-                margin-left: 14px;
+                margin-left: 249px;
                 padding-left: 0;
                 width: max-content;
             }
-
             h1 {
-                font-size: 17px;
+                font-size: 35px;
                 color: yellow;
                 margin: auto;
-                margin-left: -34px;
+                margin-left: -60px;
+                margin-top: 31px;
+                bottom: 103px;
             }
-
             h2 {
-                font-size: 13px;
+                font-size: 27px;
                 color: white;
                 margin: auto;
-                margin-left: -17px;
+                margin-left: -35px;
+                margin-top: 23px;
             }
-
+            h3 {
+                font-size: 65px;
+                color: red;
+                bottom: 93px;
+                margin: auto;
+                margin-top: -6px;
+                margin-left: -176px;
+            }
             main> section>img {
                 bottom: -76px;
-                width: 26px;
+                width: 25px;
+                top: 25px;
             }
-
             section>div>img {
-                right: 62px;
-                top: 315px;
-                width: 126px;
+                position: absolute;
+                right: 380px;
+                top: 307px;
+                width: 184px;
+                margin: auto;
+
+                 }
             }
 
-            }
 
-    </style>
+
+
+
+</style>
 </head>
 <body>
 <header>
@@ -149,7 +337,7 @@
 
         <div>
             <pre><h2><i>     Student at Institute of Software Engineering</i></h2>
-                <h1>            IJSE</h1>
+                <h3>            IJSE</h3>
             </pre>
 
         </div>
