--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             bottom: 250px;
         }
 
-        @media all and (min-width: 320px) {
+        @media all and (max-width: 320px) {
             header {
                 position: relative;
                 height: 121px;
@@ -97,49 +97,48 @@
 
                 header>nav>ul {
                     position: absolute;
-                    right: 0;
-                    left: 0;
-                    width: max-content;
-                    bottom: 60px;
-                    font-size: 20px;
-                    font-family: 'Lobster', cursive;
-                    margin-left: -231px;
+                    right: 0px;
+                    left: 78px;
+                    bottom: 40px;
+                    font-size: 33px;
                     margin: auto;
-                    margin-left: 14px;
-                    list-style: none;
-                    color: white;
-                    padding-left: 0px;
+                    margin-left: -87px;
+                    padding-left: 0;
+                    width: max-content;
                 }
                 h1 {
-                    font-size: 23px;
+                    font-size: 32px;
                     color: yellow;
                     margin: auto;
-                    margin-left: -67px;
+                    margin-left: -87px;
+                    margin-top: 31px;
+                    bottom: 103px;
                 }
                 h2 {
-                    font-size: 15px;
+                    font-size: 24px;
                     color: white;
                     margin: auto;
-                    margin-left: -13px;
+                    margin-left: -60px;
+                    margin-top: 23px;
                 }
                 h3 {
-                    font-size: 33px;
+                    font-size: 44px;
                     color: red;
-                    bottom: 60px;
+                    bottom: 93px;
                     margin: auto;
-                    margin-left: -63px;
-                    margin-top: -19px;
+                    margin-top: -13px;
+                    margin-left: -52px;
                 }
                 main> section>img {
-                    padding: 0 10px 0 10px;
-                    position: relative;
-                    bottom: -195px;
+                    bottom: -41px;
+                    width: 41px;
+                    top: 158px;
                 }
                 section>div>img {
-                    border-radius: 200px;
                     position: absolute;
-                    right: -32px;
-                    top: 350px;
+                    right: -232px;
+                    top: 327px;
+                    width: 207px;
                 }
                 }
             @media all and (min-width: 320px)and (max-width: 425px) {
@@ -153,102 +152,106 @@
                     position: absolute;
                     right: 0px;
                     left: 78px;
-                    bottom: 56px;
-                    font-size: 20px;
+                    bottom: 40px;
+                    font-size: 33px;
                     margin: auto;
-                    margin-left: -68px;
+                    margin-left: -87px;
                     padding-left: 0;
                     width: max-content;
                 }
                 h1 {
-                    font-size: 22px;
+                    font-size: 32px;
                     color: yellow;
                     margin: auto;
-                    margin-left: -60px;
+                    margin-left: -87px;
                     margin-top: 31px;
                     bottom: 103px;
                 }
                 h2 {
-                    font-size: 16px;
+                    font-size: 24px;
                     color: white;
                     margin: auto;
-                    margin-left: -35px;
+                    margin-left: -60px;
                     margin-top: 23px;
                 }
                 h3 {
-                    font-size: 65px;
+                    font-size: 44px;
                     color: red;
                     bottom: 93px;
                     margin: auto;
-                    margin-top: -6px;
-                    margin-left: -326px;
+                    margin-top: -13px;
+                    margin-left: -52px;
                 }
                 main> section>img {
-                    bottom: -76px;
-                    width: 39px;
-                    top: 103px;
+                    bottom: -41px;
+                    width: 41px;
+                    top: 158px;
+
+
                 }
                 section>div>img {
                     position: absolute;
-                    right: 17px;
-                    top: 325px;
-                    width: 199px;
+                    right: -232px;
+                    top: 327px;
+                    width: 207px;
                 }
             }
 
             @media all and (min-width: 425px) and (max-width: 768px){
                 header {
                     position: relative;
-                    height: 92px;
+                    height: 78px;
                     width: 1036px;
                     box-shadow: -2px 6px 45px 1px #917a7a;
                 }
+
+
+
                 header>nav>ul {
                     position: absolute;
                     right: 0px;
                     left: 78px;
-                    bottom: 56px;
-                    font-size: 20px;
+                    bottom: 27px;
+                    font-size: 32px;
                     margin: auto;
                     margin-left: -68px;
                     padding-left: 0;
                     width: max-content;
                 }
                 h1 {
-                    font-size: 22px;
+                    font-size: 30px;
                     color: yellow;
                     margin: auto;
-                    margin-left: -60px;
-                    margin-top: 31px;
+                    margin-left: -57px;
+                    margin-top: 50px;
                     bottom: 103px;
                 }
                 h2 {
-                    font-size: 16px;
+                    font-size: 24px;
                     color: white;
                     margin: auto;
-                    margin-left: -35px;
+                    margin-left: -49px;
                     margin-top: 23px;
                 }
                 h3 {
-                    font-size: 65px;
+                    font-size: 51px;
                     color: red;
                     bottom: 93px;
                     margin: auto;
-                    margin-top: -6px;
-                    margin-left: -326px;
+                    margin-top: -23px;
+                    margin-left: -106px;
                 }
                 main> section>img {
-                    bottom: -76px;
+                    bottom: -73px;
                     width: 35px;
-                    top: 20px;
+                    top: 143px;
                 }
                 section>div>img {
                     position: absolute;
-                    right: 328px;
-                    top: 307px;
-                    width: 144px;
+                    right: -173px;
+                    top: 315px;
+                    width: 196px;
                     margin: auto;
-                    /* margin-left: 79px; */
                 }
         }
 
@@ -269,41 +272,42 @@
                 bottom: 29px;
                 font-size: 20px;
                 margin: auto;
-                margin-left: 249px;
+                margin-left: 125px;
                 padding-left: 0;
                 width: max-content;
             }
             h1 {
-                font-size: 35px;
+                font-size: 34px;
                 color: yellow;
                 margin: auto;
-                margin-left: -60px;
+                margin-left: -110px;
                 margin-top: 31px;
                 bottom: 103px;
             }
             h2 {
-                font-size: 27px;
+                font-size: 24px;
                 color: white;
                 margin: auto;
-                margin-left: -35px;
+                margin-left: -54px;
                 margin-top: 23px;
             }
             h3 {
-                font-size: 65px;
+                font-size: 56px;
                 color: red;
                 bottom: 93px;
                 margin: auto;
                 margin-top: -6px;
-                margin-left: -176px;
+                margin-left: -136px;
             }
             main> section>img {
                 bottom: -76px;
-                width: 25px;
+                width: 48px;
                 top: 25px;
+
             }
             section>div>img {
                 position: absolute;
-                right: 380px;
+                right: 178px;
                 top: 307px;
                 width: 184px;
                 margin: auto;
@@ -311,7 +315,9 @@
                  }
             }
 
+        @media all and (min-width: 1024px) and (max-width: 1440px){
 
+        }
 
 
 
