responsive about page

--- a/sub/aboutme.html
+++ b/sub/aboutme.html
@@ -28,6 +28,83 @@
         body>div{
 
         }
+
+        @media all and (max-width: 320px){
+            section>ul {
+                color: white;
+                font-size: 9px;
+                bottom: 18px;
+                margin: auto;
+                margin-left: -20px;
+            }
+            section>img {
+                position: absolute;
+                right: 40px;
+                top: 42px;
+                width: 70px;
+            }
+        }
+
+        @media all and (min-width: 320px) and (max-width: 375px){
+            section>ul {
+                color: white;
+                font-size: 9px;
+                bottom: 18px;
+                margin: auto;
+                margin-left: -20px;
+            }
+            section>img {
+                position: absolute;
+                right: 40px;
+                top: 42px;
+                width: 70px;
+            }
+
+        }
+
+        @media all and (min-width: 375px) and (max-width: 425px){
+            section>ul {
+                color: white;
+                font-size: 15px;
+                bottom: 18px;
+                margin: auto;
+                margin-left: -20px;
+            }
+            section>img {
+                position: absolute;
+                right: 3px;
+                top: 90px;
+                width: 94px;
+            }
+        }
+        @media all and (min-width: 425px) and (max-width: 768px){
+            section>img {
+                position: absolute;
+                right: 3px;
+                top: 63px;
+                width: 92px;
+            }
+            section>ul {
+                color: white;
+                font-size: 15px;
+                bottom: 18px;
+                margin: auto;
+                margin-left: -20px;
+            }
+        }
+
+        @media all and (min-width: 768px) and (max-width: 1024px){
+            section>img {
+                position: absolute;
+                right: 0px;
+                top: 0px;
+                width: 326px;
+            }
+            section>ul {
+                color: white;
+                font-size: 28px;
+            }
+        }
     </style>
 </head>
 
@@ -52,7 +129,7 @@
     </section>
 
       <section>
-          <object data="../assests/resources/Chamodi%20Samarasinghe1.pdf" type="application/pdf" width="300" height="300"></object><br>
+          <object data="../assests/resources/PROFILE.pdf" type="application/pdf" width="300" height="300"></object><br>
           <a href="cv" download="cv">Download CV</a>
       </section>
 
