responsive contact page

--- a/sub/education.html
+++ b/sub/education.html
@@ -9,22 +9,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body{
-            background-color: #1d1e57;
+            background-color: black;
+        }
+
+        header>h1{
+            font-size: 50px;
+            color: white;
         }
 
         ul>li{
             color: white;
         }
 
-        section>div{
+        section>div>img{
             position: absolute;
-            border: 2px solid white;
-            width: 30px;
-            height: 700px;
-            top: 0;
-            right: 100px;
-            background-color: white;
+            top: 241px;
+            margin: auto;
+            margin-left: 21px;
+            width: 962px;
+            top: 202px;
         }
+
+
+
+        section>section>div>img{
+            position: absolute;
+        }
+
     </style>
 </head>
 <body>
@@ -34,28 +45,44 @@
 </header>
 
 <section>
-    <div></div>
+    <div>
+        <img src="../assests/images/edu.jpg" alt="" width="100" >
+    </div>
 
-    <ul>
-    <img src="../assests/images/den.png" alt="" width="50" align="center">
-    <br><img src="../assests/images/daughter.png" alt="" width="100" align="center">
-        <li><h3>1-5 (2004-2008) Deniyaya Central College</h3></li>
+<section>
+    <section>
+        <div><img src="../assests/images/daughter.png" alt="" width="50" align="center"></div>
+        <div><img src="../assests/images/student.png" alt="" width="50" align="center"></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </section>
+</section>
 
-     <img src="../assests/images/SouthlandsCollege.jpg" alt="" width="50" align="center">
-        <br><img src="../assests/images/student.png" alt="" width="100" align="center">
-        <li><h3>6-13 (2011-2017) Southlands College</h3></li>
 
-        <img src="../assests/images/ijse.png" alt="" width="50" align="center">
-        <br><img src="../assests/images/student%20(1).png" alt="" width="100" align="center">
-        <li><h3>Higher Studies (2019-2022) Institute of Software Engineering</h3></li>
+<!--    <ul>-->
+<!--        <div>-->
+<!--    <img src="../assests/images/den.png" alt="" width="50" align="center">-->
+<!--    <br><img src="../assests/images/daughter.png" alt="" width="100" align="center">-->
+<!--        <li><h3>1-5 (2004-2008) Deniyaya Central College</h3></li>-->
+<!--        </div>-->
 
-        <img src="../assests/images/open.jpg" alt="" width="50" align="center">
-        <li><h3>Open University</h3></li>
 
-        <img src="../assests/images/bee.png" alt="" width="50" align="center">
-        <li><h3>The Beeline English Acadamy</h3></li>
+<!--     <img src="../assests/images/SouthlandsCollege.jpg" alt="" width="50" align="center">-->
+<!--        <br><img src="../assests/images/student.png" alt="" width="100" align="center">-->
+<!--        <li><h3>6-13 (2011-2017) Southlands College</h3></li>-->
 
-    </ul>
+<!--        <img src="../assests/images/ijse.png" alt="" width="50" align="center">-->
+<!--        <br><img src="../assests/images/student%20(1).png" alt="" width="100" align="center">-->
+<!--        <li><h3>Higher Studies (2019-2022) Institute of Software Engineering</h3></li>-->
+
+<!--        <img src="../assests/images/open.jpg" alt="" width="50" align="center">-->
+<!--        <li><h3>Open University</h3></li>-->
+
+<!--        <img src="../assests/images/bee.png" alt="" width="50" align="center">-->
+<!--        <li><h3>The Beeline English Acadamy</h3></li>-->
+
+<!--    </ul>-->
 </section>
 
 </body>
