--- a/sub/contactme.html
+++ b/sub/contactme.html
@@ -37,8 +37,10 @@
             color: white;
             position: absolute;
             top: 130px;
-            right: 0;
+            right: 100px;
             left: 800px;
+            margin: auto;
+            margin-left: 30px;
         }
 
         section>h1{
@@ -48,6 +50,81 @@
 
         ul>li{
             color: white;
+        }
+
+        h3{
+            font-size: 20px;
+        }
+
+        @media all and (max-width: 768px){
+            h1 {
+                color: #4e52e9;
+                font-family: 'Lobster', cursive;
+                font-size: 30px;
+                margin-left: 79px;
+            }
+            section>h1 {
+                font-size: 29px;
+                color: white;
+            }
+            ul>li {
+                color: white;
+                margin-left: 24px;
+            }
+            section>div>h1 {
+                font-size: 25px;
+                color: white;
+                position: absolute;
+                top: 657px;
+                right: 100px;
+                left: 800px;
+                margin: auto;
+                margin-left: -705px;
+            }
+            fieldset {
+                color: white;
+                font-size: 16px;
+                border: 2px solid white;
+                width: 236px;
+                height: 266px;
+                position: absolute;
+                right: 0;
+                top: 745px;
+                left: 16px;
+            }
+        }
+
+        @media all and (min-width: 768px) and (max-width: 1024px){
+            h1 {
+                color: #4e52e9;
+                font-family: 'Lobster', cursive;
+                font-size: 70px;
+            }
+            section>h1 {
+                font-size: 40px;
+                color: white;
+            }
+            section>div>h1 {
+                font-size: 40px;
+                color: white;
+                position: absolute;
+                top: 191px;
+                right: 100px;
+                left: 800px;
+                margin: auto;
+                margin-left: -190px;
+            }
+            section>div>h1 {
+                font-size: 40px;
+                color: white;
+                position: absolute;
+                top: 191px;
+                right: 100px;
+                left: 800px;
+                margin: auto;
+                margin-left: -190px;
+            }
+
         }
     </style>
 </head>
@@ -62,8 +139,8 @@
       <h1>Let's Talk</h1>
 
        <ul>
-           <li> <h3><img src="../assests/images/female-student.png" alt="" width="50" >Chamodi Sandunika Samrasinghe</h3></li><br>
-           <li><h3> <img src="../assests/images/location.png" alt="" width="50" >Galle, Sri Lanka.</h3></li><br><br>
+           <li> <img src="../assests/images/female-student.png" alt="" width="50" ><h3>Chamodi Sandunika Samrasinghe</h3></li><br>
+           <li><img src="../assests/images/location.png" alt="" width="50" ><h3>Galle, Sri Lanka.</h3></li><br><br>
            <li> <img src="../assests/images/gmail.png" alt="" width="40" align="center">  <a href="mailto:chamodisandunika98@gmail.com">Click to Send Us a mail</a></li><br><br><br>
            <li> <img src="../assests/images/whatsapp.png" alt="" width="40" align="center">  <a href="tel:+94705135322">Call Us</a></li>
        </ul>
