--- a/sub/skills.html
+++ b/sub/skills.html
@@ -8,6 +8,55 @@
     <meta name="theme -color" content="blue">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
+    <style>
+        body{
+            background-color: black;
+        }
+
+       section> h2{
+            color: white;
+            position: absolute;
+            margin-left: 400px;
+            top: 0px;
+            font-size: 40px;
+        }
+
+        section>div{
+            border: 5px solid white;
+            border-radius: 50px;
+            height: 600px;
+            width: 800px;
+            /*background-color: white;*/
+            position: absolute;
+            margin-left: 50px;
+        }
+
+        section>section{
+            border: 6px solid white;
+            border-radius: 50px;
+            height: 600px;
+            width: 800px;
+            /*background-color: white;*/
+            position: absolute;
+            margin-left: 100px;
+        }
+
+        section>section>div{
+            border: 2px solid white;
+            height: 800px;
+            width: 400px;
+            position: absolute;
+            margin-left: 900px;
+        }
+
+        section>div>img{
+            /*position: absolute;*/
+            margin-left: 90px;
+        }
+    </style>
+
+
 </head>
 <body>
 
@@ -16,24 +65,32 @@
 </header>
 
     <section>
-        <h2>Skills</h2>
-        <img src="../assests/images/html%20(2).png" alt="" width="100">
-        <img src="../assests/images/java.jpg" alt="" width="100">
-        <img src="../assests/images/js.png" alt="" width="150">
-        <img src="../assests/images/css.png" alt="" width="100">
-        <img src="../assests/images/sql.png" alt="" width="100">
-        <img src="../assests/images/node.jpg" alt="" width="100">
+        <h2>Skills  and   Tools</h2>
+        <div>
+        <img src="../assests/gif/html.gif" alt="" width="200">
+        <img src="../assests/gif/java.gif" alt="" width="150">
+        <img src="../assests/gif/js-animation.gif" alt="" width="150">
+        <img src="../assests/gif/css-animation.gif" alt="" width="200"><br>
+        <img src="../assests/gif/msql.gif" alt="" width="300">
+        <img src="../assests/gif/nod.gif" alt="" width="200">
+        </div>
 
 
-        <hr>
-        <h2>Tools</h2>
-        <img src="../assests/images/ps.png" alt="" width="80">
-        <img src="../assests/images/hibernate.png" alt="" width="90">
-        <img src="../assests/images/tool.png" alt="" width="150">
-        <img src="../assests/images/inteliij.jpg" alt="" width="150">
-        <img src="../assests/images/vs.jpg" alt="" width="70">
-        <img src="../assests/images/a.png" alt="" width="70">
-        <img src="../assests/images/slack.png" alt="" width="100">
+        <section>
+            <div>
+<!--            <h2>Tools</h2>-->
+                    <img src="../assests/images/ps.png" alt="" width="80">
+                    <img src="../assests/images/hibernate.png" alt="" width="90">
+                    <img src="../assests/images/tool.png" alt="" width="150">
+                    <img src="../assests/images/inteliij.jpg" alt="" width="150">
+                    <img src="../assests/images/vs.jpg" alt="" width="70">
+                    <img src="../assests/images/a.png" alt="" width="70">
+                    <img src="../assests/images/slack.png" alt="" width="100">
+            </div>
+        </section>
+
+
+
     </section>
 
 
