responsive skills page

--- a/sub/skills.html
+++ b/sub/skills.html
@@ -32,27 +32,109 @@
             margin-left: 50px;
         }
 
-        section>section{
-            border: 6px solid white;
-            border-radius: 50px;
-            height: 600px;
-            width: 800px;
-            /*background-color: white;*/
-            position: absolute;
-            margin-left: 100px;
-        }
+        /*section>section{*/
+        /*    border: 6px solid white;*/
+        /*    border-radius: 50px;*/
+        /*    height: 600px;*/
+        /*    width: 800px;*/
+        /*    !*background-color: white;*!*/
+        /*    position: absolute;*/
+        /*    margin-left: 100px;*/
+        /*}*/
 
         section>section>div{
-            border: 2px solid white;
-            height: 800px;
-            width: 400px;
+            border: 5px solid white;
+            height: 500px;
+            width: 500px;
             position: absolute;
-            margin-left: 900px;
+            margin-left: 850px;
         }
 
         section>div>img{
             /*position: absolute;*/
-            margin-left: 90px;
+            margin-left: 100px;
+            bottom: 50px;
+        }
+
+        @media all and (max-width: 376px){
+            section> h2 {
+                color: white;
+                position: absolute;
+                margin-left: 82px;
+                top: 0px;
+                font-size: 24px;
+            }
+            section>div {
+                border: 5px solid white;
+                border-radius: 50px;
+                height: 600px;
+                width: 270px;
+                /* background-color: white; */
+                position: absolute;
+                margin-left: 5px;
+                top: 50px;
+            }
+            section>div>img {
+                /* position: absolute; */
+                margin-left: 70px;
+                bottom: 50px;
+                width: 100px;
+            }
+            section>section>div {
+                border: 5px solid white;
+                height: 751px;
+                width: 270px;
+                position: absolute;
+                margin-left: 7px;
+                top: 706px;
+            }
+            section>div>img {
+                /* position: absolute; */
+                margin-left: 70px;
+                bottom: 50px;
+                width: 100px;
+            }
+
+        }
+
+        @media all and (min-width: 376px) and (max-width: 768px){
+            section> h2 {
+                color: white;
+                position: absolute;
+                margin-left: 129px;
+                top: 0px;
+                font-size: 53px;
+            }
+            section>div {
+                border: 5px solid white;
+                border-radius: 50px;
+                height: 600px;
+                width: 606px;
+                /* background-color: white; */
+                position: absolute;
+                margin-left: 9px;
+                top: 294px;
+            }
+            section>div>img {
+                /* position: absolute; */
+                margin-left: 100px;
+                bottom: 50px;
+                width: 142px;
+            }
+            section>section>div {
+                border: 5px solid white;
+                height: 613px;
+                width: 575px;
+                position: absolute;
+                margin-left: 49px;
+                top: 948px;
+            }
+            section>div>img {
+                /* position: absolute; */
+                margin-left: 100px;
+                bottom: 50px;
+                width: 142px;
+            }
         }
     </style>
 
@@ -67,10 +149,13 @@
     <section>
         <h2>Skills  and   Tools</h2>
         <div>
-        <img src="../assests/gif/html.gif" alt="" width="200">
-        <img src="../assests/gif/java.gif" alt="" width="150">
+
+<!--        <img src="../assests/gif/html.gif" alt="" width="200">-->
+<!--        <img src="../assests/gif/java.gif" alt="" width="150"><br>-->
         <img src="../assests/gif/js-animation.gif" alt="" width="150">
-        <img src="../assests/gif/css-animation.gif" alt="" width="200"><br>
+        <img src="../assests/gif/css-animation.gif" alt="" width="200"><br><br>
+            <img src="../assests/gif/html.gif" alt="" width="200">
+            <img src="../assests/gif/java.gif" alt="" width="150"><br>
         <img src="../assests/gif/msql.gif" alt="" width="300">
         <img src="../assests/gif/nod.gif" alt="" width="200">
         </div>
@@ -79,13 +164,13 @@
         <section>
             <div>
 <!--            <h2>Tools</h2>-->
-                    <img src="../assests/images/ps.png" alt="" width="80">
-                    <img src="../assests/images/hibernate.png" alt="" width="90">
-                    <img src="../assests/images/tool.png" alt="" width="150">
-                    <img src="../assests/images/inteliij.jpg" alt="" width="150">
-                    <img src="../assests/images/vs.jpg" alt="" width="70">
-                    <img src="../assests/images/a.png" alt="" width="70">
-                    <img src="../assests/images/slack.png" alt="" width="100">
+                    <img src="../assests/gif/ps.gif" alt="" width="150">
+                    <img src="../assests/images/hibernate.png" alt="" width="90"><br><br>
+                    <img src="../assests/images/tool.png" alt="" width="100">
+                    <img src="../assests/images/inteliij.jpg" alt="" width="100"><br><br>
+                    <img src="../assests/gif/vs.gif" alt="" width="70">
+                    <img src="../assests/images/a.png" alt="" width="70"><br><br>
+                    <img src="../assests/gif/slack%20gif.gif" alt="" width="100">
             </div>
         </section>
 
